[package]
name = "T-Rex"
version = "0.1.0"
edition = "2024"
authors = ["Debashis B. <bddebashis@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "T-Rex: A powerful collection of EGUI widgets and components"
repository = "https://github.com/bdbaidya/T-Rex.git"
documentation = "https://docs.rs/t-rex"
homepage = "https://github.com/bdbaidya/T-Rex.git"
keywords = ["egui", "gui", "ui", "widgets", "trex"]
categories = ["gui"]
readme = "README.md"


[dependencies]
eframe = "0.33.0"
egui = "0.33.0"